// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountCell should match a snapshot 1`] = `
<p>
  £10000.00
</p>
`;

exports[`AmountCell should match a snapshot where no value 1`] = `
<p>
  £0
</p>
`;

exports[`Payments  should match a snapshot where has payments list 1`] = `
<ErrorBoundary>
  <Component>
    <div
      className="justify-between flex items-center"
    >
      <Component
        className="mb-0"
      >
        Payments Dashboard
      </Component>
      <Component />
    </div>
  </Component>
  <PaymentsFilterForm
    filterValues={
      Object {
        "createdFrom": "2019-09-11",
        "createdTo": "2019-10-11",
        "description": "",
        "pageSize": "12",
        "properties": "",
        "status": Array [],
        "type": Array [],
      }
    }
    onSearch={[Function]}
  />
  <Component>
    <mock-styled.div>
      <Component
        columns={
          Array [
            Object {
              "Cell": [Function],
              "Header": "Property",
              "accessor": "propertyId",
            },
            Object {
              "Cell": [Function],
              "Header": "Amount",
              "accessor": "amount",
            },
            Object {
              "Header": "Customer",
              "accessor": "customer.name",
            },
            Object {
              "Header": "Description",
              "accessor": "description",
            },
            Object {
              "Header": "Client A/C",
              "accessor": "clientAccountName",
            },
            Object {
              "Cell": [Function],
              "Header": "Status",
              "accessor": "status",
            },
            Object {
              "Cell": [Function],
              "Header": "Request Date",
              "accessor": "created",
            },
            Object {
              "Cell": [Function],
              "Header": "Email Invoice",
              "accessor": "id",
              "id": "customer.id",
            },
            Object {
              "Cell": [Function],
              "Header": "Card Payment",
              "accessor": "id",
              "id": "id",
            },
          ]
        }
        data={
          Array [
            Object {
              "_eTag": "",
              "_links": Object {
                "customer": Object {
                  "href": "/contacts/OXF12300101",
                },
                "property": Object {
                  "href": "/properties/PRP200001",
                },
                "self": Object {
                  "href": "/payments/PAY20000001",
                },
              },
              "amount": 100,
              "clientAccountName": "Primary",
              "companyId": "",
              "created": "2018-12-12T12:30:23.0000000Z",
              "customer": Object {
                "email": "example@email.com",
                "forename": "John",
                "homePhone": "01234 567890",
                "id": "OXF12300101",
                "mobilePhone": "07890 123456",
                "name": "Mr John Smith",
                "primaryAddress": Object {
                  "buildingName": "",
                  "buildingNumber": "1",
                  "countryId": "GB",
                  "line1": "Test House",
                  "line2": "Test Lane",
                  "line3": "County of Test",
                  "line4": "Test City",
                  "postcode": "A11 2BB",
                },
                "surname": "Smith",
                "title": "Mr",
                "type": "contact",
                "workPhone": "",
              },
              "description": "Tenancy Check Fee",
              "externalReference": "",
              "id": "PAY20000001",
              "landlordId": "",
              "ledger": "tenant",
              "modified": "2019-01-08T12:30:34.0000000Z",
              "propertyId": "PRP200001",
              "status": "awaitingPosting",
              "tenancyId": "",
              "type": "paymentRequest",
            },
          ]
        }
        expandable={true}
        scrollable={true}
      />
    </mock-styled.div>
  </Component>
  <Component
    onChange={[Function]}
    pageNumber={1}
    pageSize={1}
    totalCount={1}
  />
  <Component
    payment={null}
    refetchPayments={[MockFunction]}
    setSelectedPayment={[Function]}
  />
</ErrorBoundary>
`;

exports[`Payments  should match a snapshot where loading 1`] = `
<ErrorBoundary>
  <Component>
    <div
      className="justify-between flex items-center"
    >
      <Component
        className="mb-0"
      >
        Payments Dashboard
      </Component>
      <Component />
    </div>
  </Component>
  <PaymentsFilterForm
    filterValues={
      Object {
        "createdFrom": "2019-09-11",
        "createdTo": "2019-10-11",
        "description": "",
        "pageSize": "12",
        "properties": "",
        "status": Array [],
        "type": Array [],
      }
    }
    onSearch={[Function]}
  />
  <Component />
  <Component
    payment={null}
    refetchPayments={[MockFunction]}
    setSelectedPayment={[Function]}
  />
</ErrorBoundary>
`;

exports[`Payments  should match a snapshot where payments list is empty 1`] = `
<ErrorBoundary>
  <Component>
    <div
      className="justify-between flex items-center"
    >
      <Component
        className="mb-0"
      >
        Payments Dashboard
      </Component>
      <Component />
    </div>
  </Component>
  <PaymentsFilterForm
    filterValues={
      Object {
        "createdFrom": "2019-09-11",
        "createdTo": "2019-10-11",
        "description": "",
        "pageSize": "12",
        "properties": "",
        "status": Array [],
        "type": Array [],
      }
    }
    onSearch={[Function]}
  />
  <Component
    variant="info"
  >
    No payments match your search criteria
  </Component>
  <Component
    payment={null}
    refetchPayments={[MockFunction]}
    setSelectedPayment={[Function]}
  />
</ErrorBoundary>
`;

exports[`PropertyCell should match a snapshot for default status 1`] = `
<mock-styled.div>
  15 Example street Solihull West Midlands B91 2XX
</mock-styled.div>
`;

exports[`PropertyCell should match a snapshot where loading 1`] = `""`;

exports[`RequestPaymentCell should match a snapshot 1`] = `
<a
  onClick={[Function]}
>
  Email
</a>
`;

exports[`RequestedCell should match a snapshot 1`] = `
<p>
  01 Jan 2020
</p>
`;

exports[`StatusCell should match a snapshot 1`] = `
<p>
  Paid
</p>
`;

exports[`StatusCell should match a snapshot for default status 1`] = `
<p>
  Other
</p>
`;

exports[`TakePaymentCell should match a snapshot 1`] = `
<a
  onClick={[Function]}
>
  Card
</a>
`;
